# landsearch-backend

./: .env  .gitignore  README.md  data.cdb  pyproject.toml  requirements.txt  sample.env
app/: main.py
app/api/: document_processing.py  document_retrieval.py
app/config/: dependencies.py  settings.py
app/core/: document_retrieval.py  document_search.py  document_upload.py
app/schemas/: schemas.py  test_data.py  utility_schemas.py
app/services/: compute_coordinates.py  document_loaders.py  (+4 more)
logs/: app.main.log.2024-12-10  app.main.log.2024-12-12  app.main.log.2024-12-14  app.main.log.2024-12-16  app.main.log.2024-12-18  app.main.log.2024-12-19  app.main.log.2024-12-23  app.main.log.2025-01-01  app.main.log.2025-01-02  app.main.log.2025-01-04  app.main.log.2025-01-05  app.main.log.2025-01-06  app.services.document_loaders.log.2025-01-01  app.services.document_loaders_error.log.2024-12-10  app.services.document_processing.log.2024-12-10  app.services.document_processing.log.2025-01-01  app.services.document_processing.log.2025-01-04  app.services.document_processing.log.2025-01-05  app.services.document_processing.log.2025-01-06  app.services.document_storage.log.2025-01-01  app.services.document_storage_error.log.2025-01-04  app.services.site_data_processing_LandDataProcessor.log.2024-12-10  app.services.site_data_processing_LandDataProcessor.log.2025-01-01  app.services.site_data_processing_LandDataProcessor.log.2025-01-04  app.services.site_data_processing_LandDataProcessor.log.2025-01-05  app.services.site_data_processing_LandDataProcessor.log.2025-01-06
(+7 files in other folders)
